--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
+@using TheTodoWeb.Pages;
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to TheTodoRazerApp</h1>
+    <p>Click to goto ToDoList</p>
+    <p><a class="btn btn-primary" asp-page="/ToDoList">ToDoList</a></p>
 </div>
