Added Pages to the todolist with crud

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -8,5 +8,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome to TheTodoRazerApp</h1>
     <p>Click to goto ToDoList</p>
-    <p><a class="btn btn-primary" asp-page="/ToDoList">ToDoList</a></p>
+    <p><a class="btn btn-primary" asp-page="/ToDoList/UnCompletedToDoList">ToDoList</a></p>
 </div>
