--- a/Pages/ToDoList/UnCompletedToDoList.cshtml
+++ b/Pages/ToDoList/UnCompletedToDoList.cshtml
@@ -1,9 +1,9 @@
 @page
 @using TheTodoService.DataTransferObjects;
 @using TheTodoService.Enums;
-@model TheTodoWeb.Pages.ToDoListModel
+@model TheTodoWeb.Pages.UnCompletedToDoListModel
 @{
-    ViewData["Title"] = "ToDoList";
+    ViewData["Title"] = "UnCompletedToDoList";
 }
 
 <h3>ToDoList</h3>
@@ -24,18 +24,16 @@
 <tbody>
         @foreach (ToDoItemDto item in Model.ToDoItems)
         {
-                            <tr>
-                                <td>@item.Id</td>
-                                <td>@item.TaskDescription</td>
-                                <td>@item.CreatedTime</td>
-                                <td>@item.IsCompleted</td>
-                                <td>@item.Priority</td>
-<td>
-                                    <a class="btn btn-primary" asp-page="EditToDoList" asp-route-id="@item.Id">Edit</a>
-                                            <form method="post" asp-page-handler="Completed" asp-route-id="@item.Id"><a class="btn btn-danger" asp-route-id="@item.Id">Complete</a></form>
-                                            <button ></button>
-</td>
-                            </tr>
+                                    <tr>
+                                        <td>@item.Id</td>
+                                        <td>@item.TaskDescription</td>
+                                        <td>@item.CreatedTime</td>
+                                        <td>@item.IsCompleted</td>
+                                        <td>@item.Priority</td>
+        <td>
+    <a class="btn btn-primary" href="/ToDoList/EditToDoList/@item.Id">Edit</a>
+        </td>
+                                    </tr>
         }
 </tbody>
 </table>
@@ -51,7 +49,7 @@
       Here can you create a new todo item.
       <hr />
     </div>
-<form method="post" asp-page-handler="CreateTask">
+<form method="post" asp-page-handler="CreateTaskAsync">
     <div class="input-group mb-3">
   <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
   <input type="text" class="form-control" asp-for="Description" id="description" name="description">
@@ -62,7 +60,7 @@
   <select class="form-select" asp-for="PriorityForm" name="priorityForm">
                     @foreach (PrioryEnumDto priorityEnum in Enum.GetValues(typeof(PrioryEnumDto)))
                     {
-                                        <option value="@priorityEnum">@priorityEnum</option>
+                                                <option value="@priorityEnum">@priorityEnum</option>
                     }
   </select>
   </div>
