Fixed DeleteTask was issues with not sending id, Fixed UnCompletedTasks and CompletedTasks in Service and Repo

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ToDoList/UnCompletedToDoList">Uncompleted Tasks</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ToDoList/CompletedToDoList">Completed Tasks</a>
+                        </li>
                     </ul>
                 </div>
             </div>
