--- a/Pages/ToDoList/UnCompletedToDoList.cshtml
+++ b/Pages/ToDoList/UnCompletedToDoList.cshtml
@@ -10,33 +10,41 @@
                             <a class="btn btn-primary" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">Create</a>
 <hr />
 
-<table class="table table-hover">
-    <thead>
-     <tr>
-            <th>Id</th>
-            <th>Description</th>
-            <th>Created</th>
-            <th>Completed</th>
-            <th>Priory</th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-<tbody>
-        @foreach (ToDoItemDto item in Model.ToDoItems)
-        {
-                                    <tr>
-                                        <td>@item.Id</td>
-                                        <td>@item.TaskDescription</td>
-                                        <td>@item.CreatedTime</td>
-                                        <td>@item.IsCompleted</td>
-                                        <td>@item.Priority</td>
-        <td>
-    <a class="btn btn-primary" href="/ToDoList/EditToDoList/@item.Id">Edit</a>
-        </td>
-                                    </tr>
-        }
-</tbody>
-</table>
+@if (Model.ToDoItems != null && Model.ToDoItems.Any())
+{
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Description</th>
+                <th>Created</th>
+                <th>Completed</th>
+                <th>Priory</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (ToDoItemDto item in Model.ToDoItems)
+            {
+                <form method="post" asp-page-handler="CompletedTask">
+                    <tr>
+                        <input type="hidden" name="id" value="@item.Id" />
+                        <td><a style="color: black; text" href="/ToDoList/EditToDoList/@item.Id">@item.TaskDescription</a></td>
+                        <td>@item.CreatedTime</td>
+                        <td><input class="form-check-input" asp-for="@item.IsCompleted" type="submit" value=""></td>
+                        <td>@item.Priority</td>
+                    </tr>
+                </form>
+            }
+        </tbody>
+    </table>
+}
+
+else
+{
+<div class="alert alert-primary" role="alert">
+No todo items found.
+</div>
+}
+
 
 
                             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
@@ -49,7 +57,7 @@
       Here can you create a new todo item.
       <hr />
     </div>
-<form method="post" asp-page-handler="CreateTaskAsync">
+<form method="post" asp-page-handler="CreateTask">
     <div class="input-group mb-3">
   <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
   <input type="text" class="form-control" asp-for="Description" id="description" name="description">
@@ -60,11 +68,11 @@
   <select class="form-select" asp-for="PriorityForm" name="priorityForm">
                     @foreach (PrioryEnumDto priorityEnum in Enum.GetValues(typeof(PrioryEnumDto)))
                     {
-                                                <option value="@priorityEnum">@priorityEnum</option>
+                     <option value="@priorityEnum">@priorityEnum</option>
                     }
   </select>
   </div>
-<button class="btn btn-primary" type="submit">Button</button>
+<button class="btn btn-primary" type="submit">Create a task</button>
 </form>
   </div>
 </div>
