Working on EditToDoList fixing soo updating function works

--- a/Pages/ToDoList/EditToDoList.cshtml
+++ b/Pages/ToDoList/EditToDoList.cshtml
@@ -10,24 +10,24 @@
     Here can you edit a todo item.
     <hr />
     </div>
-@if (Model.TodoItem != null)
+@if (Model.ToDoItems != null)
 {
     <form method="post" asp-page-handler="UpdateTask">
         <div class="input-group mb-3">
             <span class="input-group-text" id="inputGroup-sizing-default">Description</span>
-            <input type="text" class="form-control" asp-for="TodoItem.TaskDescription" id="description" name="description">
+            <input type="text" class="form-control" asp-for="ToDoItems.TaskDescription" id="description" name="description">
         </div>
 
         <div class="input-group mb-3">
-            <label class="input-group-text" for="inputGroupSelect01">Priority</label>
-            <select class="form-select" asp-for="TodoItem.Priority" name="priorityForm">
+            <label class="input-group-text">Priority</label>
+            <select class="form-select" asp-for="ToDoItems.Priority" name="priorityForm">
                 @foreach (PrioryEnumDto priorityEnum in Enum.GetValues(typeof(PrioryEnumDto)))
                 {
                     <option value="@priorityEnum">@priorityEnum</option>
                 }
             </select>
         </div>
-        <button class="btn btn-primary" type="submit">Button</button>
+        <button class="btn btn-primary" type="submit">Update</button>
     </form>
 }
 else
